stylesheets/styles.css
/* ... */
header p {
  color: #d8d8d8;
  text-shadow: rgba(0, 0, 0, 0.2) 0 1px 0;
  font-size: 18px;
  margin: 0px;
}

#banner {
  z-index: 100;
  left: 0;
  right: 50%;
  height: 50px;
  margin-right: -382px;
  position: fixed;
  top: 260px;
  background: #ffcc00;
  border: 1px solid #f0b500;
  -moz-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.25);
  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.25);
  -o-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.25);
  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.25);
  -moz-border-radius: 0px 2px 2px 0px;
  -webkit-border-radius: 0px 2px 2px 0px;
  -o-border-radius: 0px 2px 2px 0px;
  -ms-border-radius: 0px 2px 2px 0px;
  -khtml-border-radius: 0px 2px 2px 0px;
  border-radius: 0px 2px 2px 0px;
  padding-right: 10px;
}
#banner .button {
  border: 1px solid #dba500;
  background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #ffe788), color-stop(100%, #ffce38));
  background: -webkit-linear-gradient(#ffe788, #ffce38);
  background: -moz-linear-gradient(#ffe788, #ffce38);
  background: -o-linear-gradient(#ffe788, #ffce38);
  background: -ms-linear-gradient(#ffe788, #ffce38);
  background: linear-gradient(#ffe788, #ffce38);
  -moz-border-radius: 2px;
  -webkit-border-radius: 2px;
  -o-border-radius: 2px;
  -ms-border-radius: 2px;
  -khtml-border-radius: 2px;
  border-radius: 2px;
  -moz-box-shadow: inset 0px 1px 0px rgba(255, 255, 255, 0.4), 0px 1px 1px rgba(0, 0, 0, 0.1);
  -webkit-box-shadow: inset 0px 1px 0px rgba(255, 255, 255, 0.4), 0px 1px 1px rgba(0, 0, 0, 0.1);
  -o-box-shadow: inset 0px 1px 0px rgba(255, 255, 255, 0.4), 0px 1px 1px rgba(0, 0, 0, 0.1);
  box-shadow: inset 0px 1px 0px rgba(255, 255, 255, 0.4), 0px 1px 1px rgba(0, 0, 0, 0.1);
  background-color: #FFE788;
  margin-left: 5px;
  padding: 10px 12px;
  margin-top: 6px;
  line-height: 14px;
  font-size: 14px;
  color: #333;
  font-weight: bold;
  display: inline-block;
  text-align: center;
}
#banner .button:hover {
  background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #ffe788), color-stop(100%, #ffe788));
  background: -webkit-linear-gradient(#ffe788, #ffe788);
  background: -moz-linear-gradient(#ffe788, #ffe788);
  background: -o-linear-gradient(#ffe788, #ffe788);
  background: -ms-linear-gradient(#ffe788, #ffe788);
  background: linear-gradient(#ffe788, #ffe788);
  background-color: #ffeca0;
}
#banner .fork {
  position: fixed;
  left: 50%;
  margin-left: -325px;
  padding: 10px 12px;
  margin-top: 6px;
  line-height: 14px;
  font-size: 14px;
  background-color: #FFE788;
}
#banner .downloads {
  float: right;
  margin: 0 45px 0 0;
}
#banner .downloads span {
  float: left;
  line-height: 52px;
  font-size: 90%;
  color: #9d7f0d;
  text-transform: uppercase;
  text-shadow: rgba(255, 255, 255, 0.2) 0 1px 0;
}
#banner ul {
  list-style: none;
  height: 40px;
  padding: 0;
  float: left;
  margin-left: 10px;
}
#banner ul li {
  display: inline;
}
#banner ul li a.button {
  background-color: #FFE788;
}
#banner #logo {
  position: absolute;
  height: 36px;
  width: 36px;
  right: 7px;
  top: 7px;
  display: block;
  background: url(../images/octocat-logo.png);
}

section {
  width: 590px;
  padding: 30px 30px 50px 30px;
  margin: 20px 0;
  margin-top: 190px;
  position: relative;
  background: #fbfbfb;
  -moz-border-radius: 3px;
  -webkit-border-radius: 3px;
  -o-border-radius: 3px;
  -ms-border-radius: 3px;
  -khtml-border-radius: 3px;
  border-radius: 3px;
  border: 1px solid #cbcbcb;
  -moz-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.09), inset 0px 0px 2px 2px rgba(255, 255, 255, 0.5), inset 0 0 5px 5px rgba(255, 255, 255, 0.4);
  -webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.09), inset 0px 0px 2px 2px rgba(255, 255, 255, 0.5), inset 0 0 5px 5px rgba(255, 255, 255, 0.4);
  -o-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.09), inset 0px 0px 2px 2px rgba(255, 255, 255, 0.5), inset 0 0 5px 5px rgba(255, 255, 255, 0.4);
  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.09), inset 0px 0px 2px 2px rgba(255, 255, 255, 0.5), inset 0 0 5px 5px rgba(255, 255, 255, 0.4);
}

small {
  font-size: 12px;
}

nav {
  width: 230px;
  position: fixed;
  top: 220px;
  left: 50%;
  margin-left: -580px;
  text-align: right;
}
nav ul {
  list-style: none;
  list-style-image: none;
  font-size: 14px;
  line-height: 24px;
}
nav ul li {
  padding: 5px 0px;
  line-height: 16px;
}
nav ul li.tag-h1 {
  font-size: 1.2em;
}
nav ul li.tag-h1 a {
  font-weight: bold;
  color: #333;
}
nav ul li.tag-h2 + .tag-h1 {
  margin-top: 10px;
}
nav ul a {
  color: #666;
}
nav ul a:hover {
  color: #999;
}

footer {
  width: 180px;
  position: fixed;
  left: 50%;
  margin-left: -530px;
  bottom: 20px;
  text-align: right;
  line-height: 16px;
}

@media print, screen and (max-width: 1060px) {
  div.wrapper {
    width: auto;
    margin: 0;
  }

  nav {
    display: none;
  }

  header, section, footer {
    float: none;
  }
  header h1, section h1, footer h1 {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    -o-text-overflow: ellipsis;
    -ms-text-overflow: ellipsis;
  }

  #banner {
    width: 100%;
  }
  #banner .downloads {
    margin-right: 60px;
  }
  #banner #logo {
    margin-right: 15px;
  }

  section {
    border: 1px solid #e5e5e5;
    border-width: 1px 0;
    padding: 20px auto;
    margin: 190px auto 20px;
    max-width: 600px;
  }

  footer {
    text-align: center;
    margin: 20px auto;
    position: relative;
    left: auto;
    bottom: auto;
    width: auto;
  }
}
/* ... */

